finaliser ajout wane
